[package]
name = "coyote_html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sieve = { path = "../sieve" }
html = { path = "../html" }
coyote = { path = "../coyote" }
template_string = { path = "../template_string" }
component_string = { path = "../component_string" }
