[package]
name = "coyote_html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rulesets = { path = "../rulesets" }
html = { path = "../html" }
coyote = { path = "../coyote" }
template_steps = { path = "../template_steps" }
component_string = { path = "../component_string" }
